# shepherdx

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix  main.py  pyproject.toml  setup.py
.github/workflows/: build_nix.yml
crates/shepherd-common/src/: config.rs
crates/shepherd-run/: Cargo.toml
crates/shepherd-run/src/: runner.rs
crates/shepherd-ws/src/: buffer.rs  dispatch.rs  main.rs  ws.rs
doc/api/: ws.md
docs/: runner.md
docs/api/: http.md
scripts/: robot_reset.py
shepherdx/: main.py
shepherdx/app/: __init__.py  __main__.py  app.py  control.py  editor.py  router.py  upload.py
shepherdx/common/: __init__.py  channels.py  config.py  user.py
shepherdx/common/mqtt/: __init__.py  client.py  messages.py
shepherdx/http/: __init__.py  __main__.py  http.py
shepherdx/mqtt/: __init__.py  client.py
shepherdx/run/: __init__.py  __main__.py  run.py
shepherdx/ws/: __init__.py  __main__.py  ws.py
static/: README.md
static/docs/: README.md
static/editor/: README.md
