[project]
name = "shepherdx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiomqtt>=2.4.0",
    "asyncio>=4.0.0",
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "python-lsp-server>=1.14.0",
]
